Worth_SQL_Script_Initial_16.12.2020_II

--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -798,6 +798,7 @@
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_04122020.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_11122020.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_16.12.2020.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_16.12.2020_II.sql" />
     <Content Include="EquipmentNew\dist\dual-listbox.css" />
     <Content Include="EquipmentNew\dist\dual-listbox.js" />
     <Content Include="ERRORBOX\CSS\ErrorBox.css" />
@@ -2970,6 +2971,7 @@
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_04122020.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_11122020.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_16.12.2020.sql" />
+    <Content Include="SQLScripts\Worth_SQL_Script_Initial_16.12.2020_II.sql" />
     <Content Include="src\jquery.image-marker.css" />
     <Content Include="src\jquery.image-marker.js" />
     <Content Include="Web.config">
