--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -2971,6 +2971,7 @@
     <Content Include="SQLScripts\24.06.2020 RestHourClient Script.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_04122020.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_11122020.sql" />
+    <Content Include="SQLScripts\Worth_SQL_Script_Initial_13.01.2021.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_16.12.2020.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_16.12.2020_II.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_26.12.2020.sql" />
