--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
 
-    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-U0578U8\HOME;Database=resthoursclient2806;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
+    <add name="RestHourDBConnectionString" connectionString="Server=LAPTOP-BH78F1Q4\WORK;Database=RestHoursBugFix;User Id=sa;Password=sa1234;Trusted_Connection=False;" />
     <!--<add name="RestHourDBConnectionString" connectionString="Server=PC;Database=RestHour12;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="ServerDESKTOP-IH9MA06\OFFICE;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-DVRLFN8;Database=RestHourClient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
@@ -23,7 +23,7 @@
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=rhadmin;Password=P@ssw0rd;Trusted_Connection=False;" />-->
 
 
-    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient_newII;User Id=sa;Password=12345;Trusted_Connection=False;" />
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient_newII;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=sa;Password=k4ctw(q4dL;Trusted_Connection=False;" />-->
 
   </connectionStrings>
