--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -10,9 +10,10 @@
   </configSections>
   <connectionStrings>
 
-    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=sa;Password=k4ctw(q4dL;Trusted_Connection=False;" />
+    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=sa;Password=k4ctw(q4dL;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
-  
+   <!--<add name="RestHourDBConnectionString" connectionString="Server=PC\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
