--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -760,6 +760,7 @@
     <Content Include="CSS\login_page.css" />
     <Content Include="CSS\popuo-box.css" />
     <Content Include="CSS\style.css" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_24.02.2021.sql" />
     <Content Include="EquipmentNew\dist\dual-listbox.css" />
     <Content Include="EquipmentNew\dist\dual-listbox.js" />
@@ -2911,6 +2912,7 @@
     <None Include="SQLScripts\03-UpdateDB\01-UpdateDB.sql" />
     <None Include="SQLScripts\09-Create-SPs\dbo.stpGetCrewOvertimeValue.StoredProcedure.sql" />
     <None Include="SQLScripts\09-Create-SPs\dbo.stpUpdateInActive.StoredProcedure.sql" />
+    <Content Include="SQLScripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
     <Content Include="SQLScripts\Worth_SQL_Script_Initial_24.02.2021.sql" />
     <Content Include="src\jquery.image-marker.css" />
     <Content Include="src\jquery.image-marker.js" />
