--- a/TM.RestHour/packages.config
+++ b/TM.RestHour/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="datatables.net" version="1.10.15" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="EPPlus" version="5.2.0" targetFramework="net45" />
@@ -36,7 +38,11 @@
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Notify" version="1.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Quartz" version="2.6.2" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="toastr" version="2.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
+
+	<package id="Ionic.Zip" version="1.9.1.8" targetFramework="net45" />
+	<package id="NLog" version="4.7.5" targetFramework="net45" />
 </packages>
