--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -10,14 +10,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-	  <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-53QOB66\BINSQLSERVER;Database=resthoursclient;User Id=sa;Password=binb1234;Trusted_Connection=False;" />
-    <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\WORTH;Database=resthoursclient;User Id=sa;Password=k4ctw(q4dL;Trusted_Connection=False;" />-->
+	  <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-53QOB66\BINSQLSERVER;Database=resthoursclient;User Id=sa;Password=binb1234;Trusted_Connection=False;" />-->
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-247TCAU\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
    <!--<add name="RestHourDBConnectionString" connectionString="Server=PC\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
     <!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />-->
  
   </connectionStrings>
-	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<!--<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 		<targets>
 			<target name="logfile" xsi:type="File" fileName="exportlog.txt" />
 			<target name="logconsole" xsi:type="Console" />
@@ -27,7 +27,20 @@
 			<logger name="*" minlevel="Info" writeTo="logconsole" />
 			<logger name="*" minlevel="Debug" writeTo="logfile" />
 		</rules>
-	</nlog>
+	</nlog>-->
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <targets>
+      <target name="default" xsi:type="File"
+      fileName="logs/exportlog.txt"
+      archiveFileName="logs/archives/exportlog.{#}.txt"
+      archiveEvery="Day"
+      archiveNumbering="Rolling"
+      maxArchiveFiles="7" />
+    </targets>
+    <rules>
+      <logger name="*" writeTo="default" />
+    </rules>
+  </nlog>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
