--- a/TM.RestHour/packages.config
+++ b/TM.RestHour/packages.config
@@ -10,6 +10,7 @@
   <package id="ExcelDataReader" version="3.4.0" targetFramework="net45" />
   <package id="ExcelDataReader.DataSet" version="3.4.0" targetFramework="net45" />
   <package id="Gijgo" version="1.6.1" targetFramework="net45" />
+  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net45" />
   <package id="jQuery" version="3.2.1" targetFramework="net45" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net45" />
   <package id="jQuery.jqGrid" version="4.4.4" targetFramework="net45" />
@@ -36,13 +37,13 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="NLog" version="4.7.5" targetFramework="net45" />
+  <package id="NLog.Config" version="4.7.5" targetFramework="net45" />
+  <package id="NLog.Schema" version="4.7.5" targetFramework="net45" />
   <package id="Notify" version="1.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Quartz" version="2.6.2" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="toastr" version="2.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
-
-	<package id="Ionic.Zip" version="1.9.1.8" targetFramework="net45" />
-	<package id="NLog" version="4.7.5" targetFramework="net45" />
 </packages>
