--- a/TM.RestHour/Web.config
+++ b/TM.RestHour/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-	  <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+	  <!--<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />-->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
@@ -70,29 +70,6 @@
     <add key="OutputDateSeperator" value="/" />
     <add key="JoiningPdfRelativePath" value="../JoiningMedical/" />
 	  
-	  <!--***********************New Added For Data Export**************************-->
-	  <add key="xmlfilepath" value="D:\AllProjects\RestHourExport\RestHourExport\xml\" />
-	  <add key="xmlfile" value="D:\AllProjects\RestHourExport\RestHourExport\Zip File\XmlFiles.zip" />
-	  <add key="Crewxml" value="Crew.xml" />
-	  <add key="DepartmentAdminxml" value="DepartmentAdmin.xml" />
-	  <add key="DepartmentMasterxml" value="DepartmentMaster.xml" />
-	  <add key="FirstRunxml" value="FirstRun.xml" />
-	  <add key="GroupRankxml" value="GroupRank.xml" />
-	  <add key="Groupsxml" value="Groups.xml" />
-	  <add key="NCDetailsxml" value="NCDetails.xml" />
-	  <add key="Ranksxml" value="Ranks.xml" />
-	  <add key="Regimesxml" value="Regimes.xml" />
-	  <add key="ServiceTermsxml" value="ServiceTerms.xml" />
-	  <add key="Shipxml" value="Ship.xml" />
-	  <add key="tblRegimexml" value="tblRegime.xml" />
-	  <add key="TimeAdjustmentxml" value="TimeAdjustment.xml" />
-	  <add key="UserGroupsxml" value="UserGroups.xml" />
-	  <add key="Usersxml" value="Users.xml" />
-	  <add key="WorkSessionsxml" value="WorkSessions.xml" />
-	  <add key="CrewRegimeTRxml" value="CrewRegimeTR.xml" />
-	  <add key="CompanyDetailsxml" value="CompanyDetails.xml" />
-	  <add key="OutputSize" value="10240000" />
-	  <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
     <authentication mode="Forms">
