--- a/WORTH.Export/WORTH.Export/App.config
+++ b/WORTH.Export/WORTH.Export/App.config
@@ -30,6 +30,7 @@
     <add key="CompanyDetailsxml" value="CompanyDetails.xml" />
     <add key="OutputSize" value="10240000" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="SchedulerTimer" value="180"/>
   </appSettings>
   
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
