--- a/WORTH.Export/WORTH.Export/App.config
+++ b/WORTH.Export/WORTH.Export/App.config
@@ -4,7 +4,7 @@
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <connectionStrings>
-    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-247TCAU\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />
   </connectionStrings>
   <appSettings>
      <!--***********************New Added For Data Export**************************-->
