--- a/TM.RestHour.ImportApporvalData/TM.RestHour.ImportApprovalData/TM.RestHour.ImportApprovalData/App.config
+++ b/TM.RestHour.ImportApporvalData/TM.RestHour.ImportApprovalData/TM.RestHour.ImportApprovalData/App.config
@@ -5,9 +5,11 @@
 	</configSections>
 	<connectionStrings>
 
-		<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-U0578U8\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />
+		<!--<add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-U0578U8\HOME;Database=resthoursclient;User Id=sa;Password=sa1234;Trusted_Connection=False;" />-->
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />
 
-	</connectionStrings>
+
+  </connectionStrings>
 	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 		<targets>
 			<target name="logfile" xsi:type="File" fileName="ApprovalImportlog.txt" />
