change appConfig of Import/Export ;  bug 7 Close btn issue

--- a/TM.RestHour.ImportApporvalData/TM.RestHour.ImportApprovalData/TM.RestHour.ImportApprovalData/App.config
+++ b/TM.RestHour.ImportApporvalData/TM.RestHour.ImportApprovalData/TM.RestHour.ImportApprovalData/App.config
@@ -29,7 +29,8 @@
 		<add key="ExtractFilePath" value="\Extract File" />
 
 		<add key="xmlCrew" value="Crew.xml" />
-		<add key="SchedulerIntervalTime" value="120" /><!--*************value in Second*****************-->
+		<!--<add key="SchedulerIntervalTime" value="120" />--><!--*************value in Second*******2min**********-->
+		<add key="SchedulerIntervalTime" value="28800" /><!--*************value in Second******8hr***********-->
 		
 	</appSettings>
     <startup> 
