--- a/WORTH.Export/WORTH.Export/App.config
+++ b/WORTH.Export/WORTH.Export/App.config
@@ -31,7 +31,8 @@
     <add key="OutputSize" value="10240000" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="SchedulerTimer" value="180"/>
-  <add key="SchedulerIntervalTime" value="120" /><!--*************value in Second*****************-->
+  <!--<add key="SchedulerIntervalTime" value="120" />--><!--*************value in Second*******2min**********-->
+	  <add key="SchedulerIntervalTime" value="28800" /><!--*************value in Second******8hr***********-->
   </appSettings>
   
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
