--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -822,12 +822,18 @@
     <Content Include="images\1.mp4" />
     <Content Include="images\admin.png" />
     <Content Include="images\b2.jpg" />
+    <Content Include="images\backsidebar.png" />
+    <Content Include="images\care.png" />
     <Content Include="images\e-mail.png" />
     <Content Include="images\excel.png" />
     <Content Include="images\G - Copy.png" />
     <Content Include="images\G old.png" />
     <Content Include="images\G.png" />
     <Content Include="images\G2.png" />
+    <Content Include="images\loginimg.png" />
+    <Content Include="images\logout.png" />
+    <Content Include="images\logout2.png" />
+    <Content Include="images\out.png" />
     <Content Include="images\password.png" />
     <Content Include="images\picture.jpg" />
     <Content Include="images\picture1.jpg" />
@@ -839,10 +845,17 @@
     <Content Include="images\R.png" />
     <Content Include="images\R2.png" />
     <Content Include="images\ship-footer.png" />
+    <Content Include="images\ship-icon-png-22.jpg" />
+    <Content Include="images\shipicon.png" />
     <Content Include="images\ship_PNG5412.png" />
     <Content Include="images\spinner.gif" />
+    <Content Include="images\tech.png" />
     <Content Include="images\tick.png" />
     <Content Include="images\user.png" />
+    <Content Include="images\wlogin.png" />
+    <Content Include="images\WORTH-Logo.png" />
+    <Content Include="images\Worth.ico" />
+    <Content Include="images\Worth.png" />
     <Content Include="JS\ErrorBox.js" />
     <Content Include="laycss\bootstrap\dist\css\bootstrap-theme.css" />
     <Content Include="laycss\bootstrap\dist\css\bootstrap-theme.min.css" />
@@ -2853,6 +2866,7 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="images\Thumbs.db" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
