--- a/TM.RestHour/Web.Release.config
+++ b/TM.RestHour/Web.Release.config
@@ -9,8 +9,9 @@
     finds an atrribute "name" that has a value of "MyDB".
   -->
     <connectionStrings>
-    <add name="RestHourDBConnectionString" connectionString="Server=tcp:resthours.database.windows.net,1433;Initial Catalog=resthoursdemo;Persist Security Info=False;User ID=Koushik;Password=Password@2017;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
-  </connectionStrings>
+      <add name="RestHourDBConnectionString" connectionString="Server=tcp:worthdbserver.database.windows.net,1433;Database=resthoursclient;User Id=worthadmin;Password=k4ctw(q4dL;Trusted_Connection=False;" />
+
+    </connectionStrings>
 
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
