--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Controllers\OptionsController.cs" />
     <Compile Include="Controllers\PatientProblemController.cs" />
     <Compile Include="Controllers\PlansController.cs" />
+    <Compile Include="Controllers\PsychologicalEvaluationController.cs" />
     <Compile Include="Controllers\PsychometricsController.cs" />
     <Compile Include="Controllers\RankPermissionController.cs" />
     <Compile Include="Controllers\RanksController.cs" />
@@ -3113,6 +3114,7 @@
     <Content Include="Views\Plans\Index.cshtml" />
     <Content Include="Views\MentalHealth\Index.cshtml" />
     <Content Include="Views\Psychometrics\Index.cshtml" />
+    <Content Include="Views\PsychologicalEvaluation\LocusOfControl.cshtml" />
     <None Include="Web.Installer.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
