--- a/TM.RestHour.DAL/TM.RestHour.DAL.csproj
+++ b/TM.RestHour.DAL/TM.RestHour.DAL.csproj
@@ -66,6 +66,7 @@
     <Compile Include="OptionsDAL.cs" />
     <Compile Include="PermissionsDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PsychologicalEvaluationDAL.cs" />
     <Compile Include="RanksDAL.cs" />
     <Compile Include="RegimesDAL.cs" />
     <Compile Include="ReportsDAL.cs" />
