17-01-2022 resthoursclient Full script

--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -609,6 +609,14 @@
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="CrewHealthImages\CrewHealthImages_1.png" />
+    <Content Include="devsqlscripts\17-01-2022 resthoursclient Full script.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Full_12.03.2021.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_17.03.2021.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_17.03.2021_II.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_22.03.2021.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_23.03.2021.sql" />
+    <Content Include="devsqlscripts\Worth_SQL_Script_Initial_24.02.2021.sql" />
     <Content Include="EquipmentNew\dist\dual-listbox.css" />
     <Content Include="EquipmentNew\dist\dual-listbox.js" />
     <Content Include="Equipment\Desert.jpg" />
@@ -1202,6 +1210,79 @@
     <Content Include="Scripts\UploadMedicalInventory.js" />
     <Content Include="Scripts\Vessel.js" />
     <Content Include="Scripts\VesselDetails.js" />
+    <Content Include="sqlscripts\01-CreateTable\CreateTable_RestHour.sql" />
+    <Content Include="sqlscripts\03-UpdateDB\01-UpdateDB.sql" />
+    <Content Include="sqlscripts\04-CreateFunction\ufn_CSVToTable.sql" />
+    <Content Include="sqlscripts\07-DefaultMasterData\DefaultMasterData_RestHour.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.name.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpAddUsers.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpDeleteShipDetails.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpDetleteRanks.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetAllCrewByCrewID.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetAllRanks.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetAllRegimes.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetAllShipDetails.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetChildNodes.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetCrewByRankID.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetCrewByUserID.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetCrewDetailsPageWise.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetCrewIDFromWorkSessions.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetCrewListingPageWise.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetCrewOvertimeValue.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetCrewPageWise.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetCrewReportListPageWise.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetDataForVarianceReport.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetDayWiseCrewBookingData.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetFirstLastNameByUserId.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetLastAdjustmentBookedStatus.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetLastSevenDaysWorkSchedule.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetLastSixDaysWorkSchedule.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetMinusOneDayAdjustmentDays.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetNonComplianceByCrewId.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetNonComplianceInfo.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetParentNodes.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetPlusOneDayAdjustmentDays.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetRankFromGroup.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetRanksByID.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetRanksPageWise.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetRegimeById.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetShipDetailsByID.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetShipDetailsPageWise.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetTimeAdjustment.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetTimeAdjustmentDetailsPageWise.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetUserGroupsByUserID.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetUsersDetailsPageWise.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetWrokSessionsByCrewandDate.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpGetWrokSessionsByDate.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpLastBookedSession.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpResetPassword.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveCrew.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveGroups.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveRankGroups.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveRanks.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveRegimes.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveShipDetails.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveShipTab.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveTimeAdjustment.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpSaveWorkSessions.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpUpdateInActive.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpUpdateRanks.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpUpdateTimeEntry.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.stpUserAuthentication.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.usp_GetAllCrewForDrp.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.usp_GetAllGroupsForDrp.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.usp_GetAllRanksForDrp.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.usp_GetAllShipForDrp.StoredProcedure.sql" />
+    <Content Include="sqlscripts\09-Create-SPs\dbo.usp_GetAllUsersForDrp.StoredProcedure.sql" />
+    <Content Include="sqlscripts\17-01-2022 resthoursclient Full script.sql" />
+    <Content Include="sqlscripts\Worth_SQL_Script_Full_12.03.2021.sql" />
+    <Content Include="sqlscripts\Worth_SQL_Script_Full_18.12.2021%28usk%29.sql" />
+    <Content Include="sqlscripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
+    <Content Include="sqlscripts\Worth_SQL_Script_Initial_17.03.2021.sql" />
+    <Content Include="sqlscripts\Worth_SQL_Script_Initial_17.03.2021_II.sql" />
+    <Content Include="sqlscripts\Worth_SQL_Script_Initial_22.03.2021.sql" />
+    <Content Include="sqlscripts\Worth_SQL_Script_Initial_23.03.2021.sql" />
+    <Content Include="sqlscripts\Worth_SQL_Script_Initial_24.02.2021.sql" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
