--- a/TM.RestHour/TM.RestHour.csproj
+++ b/TM.RestHour/TM.RestHour.csproj
@@ -614,6 +614,36 @@
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="CrewHealthImages\CrewHealthImages_1.png" />
+    <Content Include="css\bootstrap.min.css" />
+    <Content Include="css\colors\default.css" />
+    <Content Include="css\custom.css" />
+    <Content Include="css\custom.min.css" />
+    <Content Include="css\datatable\css\buttons.dataTables.min.css" />
+    <Content Include="css\datatable\css\jquery.dataTables.min.css" />
+    <Content Include="css\datatable\css\responsive.dataTables.min.css" />
+    <Content Include="css\datatable\images\sort_asc.html" />
+    <Content Include="css\datatable\images\sort_asc_disabled.html" />
+    <Content Include="css\datatable\images\sort_both.html" />
+    <Content Include="css\datatable\images\sort_desc.html" />
+    <Content Include="css\datatable\images\sort_desc_disabled.html" />
+    <Content Include="css\datatable\js\buttons.flash.min.js" />
+    <Content Include="css\datatable\js\buttons.html5.min.js" />
+    <Content Include="css\datatable\js\buttons.print.min.js" />
+    <Content Include="css\datatable\js\dataTables.buttons.min.js" />
+    <Content Include="css\datatable\js\dataTables.responsive.min.js" />
+    <Content Include="css\datatable\js\jquery.dataTables.min.js" />
+    <Content Include="css\datatable\js\jszip.min.js" />
+    <Content Include="css\datatable\js\pdfmake.min.js" />
+    <Content Include="css\datatable\js\vfs_fonts.js" />
+    <Content Include="css\ErrorBox.css" />
+    <Content Include="css\font-awesome.css" />
+    <Content Include="css\login.css" />
+    <Content Include="css\login_page.css" />
+    <Content Include="css\login_page_WORTH.css" />
+    <Content Include="css\metisMenu.css" />
+    <Content Include="css\popuo-box.css" />
+    <Content Include="css\preloader.html" />
+    <Content Include="css\style.css" />
     <Content Include="devsqlscripts\17-01-2022 resthoursclient Full script.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Full_12.03.2021.sql" />
     <Content Include="devsqlscripts\Worth_SQL_Script_Initial_04.03.2021.sql" />
@@ -634,6 +664,7 @@
     <Content Include="img\banner_Worth.png" />
     <Content Include="img\default-skin\default-skin.png" />
     <Content Include="img\default-skin\default-skin.svg" />
+    <Content Include="img\excel-file-open.png" />
     <Content Include="img\icon\bell.svg" />
     <Content Include="img\icon\calender_icon.svg" />
     <Content Include="img\icon\msg.svg" />
